--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,81 +18,85 @@
   13. Montserrat (weights: 100–900)
 */
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Audiowide&family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&family=Kdam+Thmor+Pro&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Michroma&family=Orbitron:wght@400..900&family=Righteous&family=Syncopate:wght@400;700&family=Train+One&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--primary-rgb: 146, 255, 230;
+	--secondary-rgb: 148, 200, 255;
+
+	--color-primary: rgb(var(--primary-rgb));
+	--color-secondary: rgb(var(--secondary-rgb));
+	--color-violet: rgb(var(--violet-rgb));
+	--bg-dark: rgb(var(--dark-bg-rgb));
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: none;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: none;
+		--foreground: #ededed;
+	}
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow: hidden;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background: var(--background);
+	color: var(--foreground);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 }
 
 button {
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  font: inherit;
-  color: inherit;
-  cursor: pointer;
-  outline: none;
+	cursor: pointer;
+	margin: 0;
+	outline: none;
+	border: none;
+	background: none;
+	padding: 0;
+	color: inherit;
+	font: inherit;
 }
 
 button:focus {
-  outline: none;
+	outline: none;
 }
 /* ------ Formatting Classes ------ */
 .section {
-  padding: 3rem 0;
-  margin: 3rem 0;
+	margin: 3rem 0;
+	padding: 3rem 0;
 }
 
 .container {
-  max-width: 1345px;
-  padding: 0 2rem;
-  margin: 0 auto;
+	margin: 0 auto;
+	padding: 0 2rem;
+	max-width: 1345px;
 
-  /* @media (max-width: 640px) {
+	/* @media (max-width: 640px) {
     padding: 0 1rem;
   } */
 }
@@ -101,213 +105,235 @@ button:focus {
 
 /* --- glass --- */
 .glass {
-  position: relative;
-  border-style: solid;
-  border-width: 1px 1px 1px 1px;
-  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
-    rgba(146, 255, 230, 0.1);
-  border-radius: 5px;
-  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.15);
-  background-image: radial-gradient(
-      circle at 75% 96%,
-      rgba(146, 255, 230, 0.57),
-      rgba(146, 255, 230, 0.15)
-    ),
-    linear-gradient(
-      186deg,
-      rgba(235, 148, 255, 0.17),
-      rgba(235, 148, 255, 0.33)
-    );
-  backdrop-filter: blur(5px);
-  z-index: 1;
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(5px);
+	box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.15);
+	border-width: 1px 1px 1px 1px;
+	border-style: solid;
+	border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
+		rgba(146, 255, 230, 0.1);
+	border-radius: 5px;
+	background-image: radial-gradient(
+			circle at 75% 96%,
+			rgba(146, 255, 230, 0.57),
+			rgba(146, 255, 230, 0.15)
+		),
+		linear-gradient(
+			186deg,
+			rgba(235, 148, 255, 0.17),
+			rgba(235, 148, 255, 0.33)
+		);
 }
 
 /* --- glass-alt --- */
 .glass-alt {
-  position: relative;
-  border-style: solid;
-  border-width: 1px 1px 1px 1px;
-  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
-    rgba(146, 255, 230, 0.1);
-  box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
-  background-image: radial-gradient(
-      circle at 80% 10%,
-      rgba(186, 194, 141, 0.2) 10%,
-      rgba(170, 144, 255, 0) 55%
-    ),
-    linear-gradient(270deg, rgba(148, 171, 255, 0.1), rgba(90, 30, 255, 0.2));
-  border-radius: 10px;
-  backdrop-filter: blur(7px);
-  z-index: 1;
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(7px);
+	box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
+	border-width: 1px 1px 1px 1px;
+	border-style: solid;
+	border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
+		rgba(146, 255, 230, 0.1);
+	border-radius: 10px;
+	background-image: radial-gradient(
+			circle at 80% 10%,
+			rgba(186, 194, 141, 0.2) 10%,
+			rgba(170, 144, 255, 0) 55%
+		),
+		linear-gradient(270deg, rgba(148, 171, 255, 0.1), rgba(90, 30, 255, 0.2));
 }
 
 /* --- glass-dark-primary --- */
 .glass-dark-primary {
-  position: relative;
-  border-style: solid;
-  border-width: 1px 1px 1px 1px;
-  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
-    rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
-  background-image: radial-gradient(
-      circle at 100% 10%,
-      rgba(77, 30, 208, 0.15) 20%,
-      rgba(170, 144, 255, 0) 45%
-    ),
-    radial-gradient(
-      circle at 10% 100%,
-      rgba(38, 133, 181, 0.1) 10%,
-      rgba(170, 144, 255, 0) 35%
-    ),
-    linear-gradient(
-      190deg,
-      rgba(106, 138, 255, 0.1),
-      rgba(67, 183, 187, 0.15)
-    );
-  border-radius: 18px;
-  backdrop-filter: blur(4.5px);
-  z-index: 1;
-  transition: backdrop-filter 0.3s ease;
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(4.5px);
+	transition: backdrop-filter 0.3s ease;
+	box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
+	border-width: 1px 1px 1px 1px;
+	border-style: solid;
+	border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
+		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
+	border-radius: 18px;
+	background-image: radial-gradient(
+			circle at 100% 10%,
+			rgba(77, 30, 208, 0.15) 20%,
+			rgba(170, 144, 255, 0) 45%
+		),
+		radial-gradient(
+			circle at 10% 100%,
+			rgba(38, 133, 181, 0.1) 10%,
+			rgba(170, 144, 255, 0) 35%
+		),
+		linear-gradient(190deg, rgba(106, 138, 255, 0.1), rgba(67, 183, 187, 0.15));
 }
 
 .glass-dark-primary::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 18px;
-  background: linear-gradient(200deg, rgba(67, 183, 187, 0), rgba(31, 217, 224, 0.2));
-  opacity: 0;
-  transition: opacity 0.4s ease-out;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	opacity: 0;
+	transition: opacity 0.4s ease-out;
+	border-radius: 18px;
+	background: linear-gradient(
+		200deg,
+		rgba(67, 183, 187, 0),
+		rgba(31, 217, 224, 0.2)
+	);
+	content: '';
 }
 
 .glass-dark-primary:hover::after {
-  opacity: 1;
+	opacity: 1;
 }
 
 .glass-dark-primary:hover {
-  backdrop-filter: blur(6px);
+	backdrop-filter: blur(6px);
 }
 
 /* --- glass-dark-secondary --- */
 .glass-dark-secondary {
-  position: relative;
-  border-style: solid;
-  border-width: 1px 1px 1px 1px;
-  border-color: rgba(148, 200, 255, 0.65) rgba(148, 200, 255, 0.65)
-    rgba(148, 200, 255, 0.65) rgba(148, 200, 255, 0.65);
-  border-radius: 18px;
-  backdrop-filter: blur(5px);
-  z-index: 1;
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(5px);
+	border-radius: 18px;
+}
+
+/* --- glass-dark-soft --- */
+.glass-dark-soft {
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(4.5px);
+	/* border-width: 1px 1px 1px 1px; */
+	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
+		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
+	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
+	box-shadow: 0px 0px 10px 10px rgba(115, 157, 255, 0.3);
+	box-shadow: 0px 0px 20px 10px rgba(115, 157, 255, 0.2);
+	box-shadow: 0px 0px 30px 10px rgba(115, 157, 255, 0.1);
+	border: 1px solid rgba(var(--secondary-rgb), 0.1);
+	background-image: radial-gradient(
+			circle at 100% 10%,
+			rgba(77, 30, 208, 0.05) 20%,
+			rgba(170, 144, 255, 0) 45%
+		),
+		radial-gradient(
+			circle at 10% 100%,
+			rgba(38, 133, 181, 0.05) 10%,
+			rgba(170, 144, 255, 0) 35%
+		),
+		linear-gradient(190deg, rgba(106, 138, 255, 0.1), rgba(67, 183, 187, 0.033));
 }
 
 /* --- full-dropshadow --- */
 .full-dropshadow {
-  position: relative;
+	position: relative;
 }
 
 .full-dropshadow::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	content: '';
 
-  /* Radial gradient mask against background */
-  -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
-  mask: radial-gradient(
-    ellipse 75% 60%,
-    rgba(5, 0, 16, 0.8) 35%,
-    transparent 70%
-  );
-  background-color: rgba(5, 0, 16, 0.20);
+	/* Radial gradient mask against background */
+	-webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
 
-  z-index: -1;
-  pointer-events: none;
+	z-index: -1;
+	mask: radial-gradient(
+		ellipse 75% 60%,
+		rgba(5, 0, 16, 0.8) 35%,
+		transparent 70%
+	);
+	background-color: rgba(5, 0, 16, 0.2);
+	pointer-events: none;
 }
 
 /* --- full-dropshadow-hoverable --- */
 .full-dropshadow-hoverable {
-  position: relative;
+	position: relative;
 }
 
 .full-dropshadow-hoverable::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	content: '';
 
-  /* Radial gradient mask against background */
-  -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
-  mask: radial-gradient(
-    ellipse 75% 60%,
-    rgba(5, 0, 16, 0.8) 35%,
-    transparent 70%
-  );
-  background-color: rgba(5, 0, 16, 0.25);
+	/* Radial gradient mask against background */
+	-webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
 
-  z-index: -1;
-  pointer-events: none;
+	z-index: -1;
+	mask: radial-gradient(
+		ellipse 75% 60%,
+		rgba(5, 0, 16, 0.8) 35%,
+		transparent 70%
+	);
 
-  transition: background-color 0.3s ease-out;
+	transition: background-color 0.3s ease-out;
+	background-color: rgba(5, 0, 16, 0.25);
+	pointer-events: none;
 }
 
 .full-dropshadow-hoverable:hover::before {
-  background-color: rgba(148, 200, 255, 0.15);
+	background-color: rgba(148, 200, 255, 0.15);
 }
 
 .full-dropshadow-light {
-  position: relative;
+	position: relative;
 }
 
 /* --- full-dropshadow-light --- */
 .full-dropshadow-light::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	content: '';
 
-  /* Radial gradient mask against background */
-  -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
-  mask: radial-gradient(
-    ellipse 75% 60%,
-    rgba(5, 0, 16, 0.8) 15%,
-    transparent 70%
-  );
-  background-color: rgba(5, 0, 16, 0.10);
+	/* Radial gradient mask against background */
+	-webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
 
-  z-index: -1;
-  pointer-events: none;
+	z-index: -1;
+	mask: radial-gradient(
+		ellipse 75% 60%,
+		rgba(5, 0, 16, 0.8) 15%,
+		transparent 70%
+	);
+	background-color: rgba(5, 0, 16, 0.1);
+	pointer-events: none;
 }
 
 /* --- Fade-In Animation --- */
 .fade-in {
-  opacity: 0;
-  filter: blur(10px);
-  animation: fadeInText var(--fade-duration, 1.5s) ease-out forwards;
-  animation-delay: var(--fade-delay, 0.2s);
+	opacity: 0;
+	filter: blur(10px);
+	animation: fadeInText var(--fade-duration, 1.5s) ease-out forwards;
+	animation-delay: var(--fade-delay, 0.2s);
 }
 
 @keyframes fadeInText {
-  from {
-    filter: blur(10px);
-    opacity: 0;
-  }
-  to {
-    filter: blur(0px);
-    opacity: 1;
-  }
+	from {
+		opacity: 0;
+		filter: blur(10px);
+	}
+	to {
+		opacity: 1;
+		filter: blur(0px);
+	}
 }
 
 /* Layout Debug */
 * {
-  outline: 1px solid greenyellow;
-  outline: none;
+	outline: 1px solid greenyellow;
+	outline: none;
 }
