--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -7,27 +7,30 @@
 
 .exp-bar-container {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	align-content: center;
-	gap: 9px;
-	position: relative;
-	top: 210px;
-	width: 100%;
 	/* max-width: 800px; */
+	position: relative;
+	top: 300px;
+	flex-direction: row;
+	align-content: center;
+	align-items: center;
+	gap: 9px;
+	width: 100%;
 	height: auto;
 }
 
 .exp-bar-wrapper {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  position: relative;
+	display: flex;
+	position: relative;
+	align-items: center;
+	width: 100%;
+	height: 75px;
 }
 
 .exp-bar {
-	width: 100%;
-	height: 10px;
+	position: relative;
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.2);
+	border-radius: 6px;
 	/* background: rgba(148, 200, 255, 0.6); */
 	background: linear-gradient(
 		90deg,
@@ -35,11 +38,9 @@
 		rgba(148, 200, 255, 0.8) 75%,
 		rgba(146, 255, 253, 0.8)
 	);
-	border-radius: 6px;
-	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-		0 0 20px rgba(146, 255, 230, 0.2);
+	width: 100%;
+	height: 10px;
 	user-select: none;
-	position: relative;
 }
 
 .trailing-dots-container {
@@ -49,12 +50,12 @@
 }
 
 .exp-bar-trailing-dots {
-	width: 9px;
-	height: 9px;
-	border-radius: 50%;
-	background: rgba(146, 255, 253, 0.8);
 	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
 		0 0 20px rgba(146, 255, 230, 0.2);
+	border-radius: 50%;
+	background: rgba(146, 255, 253, 0.8);
+	width: 9px;
+	height: 9px;
 	user-select: none;
 	/* position: absolute;
     right: var(--position-right); */
@@ -63,12 +64,30 @@
 .checkpoint {
 	position: absolute;
 	left: 10%;
-	width: 31px;
-	height: 31px;
-	border-radius: 50%;
-	background: rgb(185, 235, 252);
+	filter: blur(5px);
 	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
 		0 0 20px rgba(146, 255, 230, 0.3), 0 0 20px rgba(148, 255, 178, 0.2);
+	border-radius: 50%;
+	background: rgb(185, 235, 252);
+	width: 31px;
+	height: 31px;
 	user-select: none;
-	filter: blur(5px);
+}
+
+
+
+.gradient-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  clip-path: var(--clip-path, none);
+  background: linear-gradient(
+    135deg,
+    rgba(146, 255, 230, 0.4) 0%,
+    rgba(148, 200, 255, 0.6) 50%,
+    rgba(106, 138, 255, 0.4) 100%
+  );
+  width: 100%;
+  height: 100%;
 }
