--- a/src/components/Section-3/Skills.module.css
+++ b/src/components/Section-3/Skills.module.css
@@ -1,12 +1,16 @@
 .skills-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 300px;
-  padding-bottom: 40vh;
-  height: 100vh;
-  overflow-x: auto;
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-right: auto;
+	margin-left: auto;
+	width: 75%;
+	min-width: 1000px;
+	max-width: 1500px;
+	height: 100vh;
+	min-height: 1000px;
 }
 
 .skills-showcase {
