--- a/src/components/Sections/Section-4/Projects.module.css
+++ b/src/components/Sections/Section-4/Projects.module.css
@@ -4,35 +4,32 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	gap: 10%;
+	gap: 150px;
 	margin: 0 auto;
+	padding: 200px 64px 64px 64px;
 	/* min-height: 900px; */
-	padding: 150px 0;
 	width: 90%;
 	max-width: 1700px;
-    height: 100%;
-}
-.projects-page-container > div:first-child {
-    width: 100% !important;
-	min-width: 500px !important;
-	min-height: 500px !important;
-}
-.projects-page-container > div:last-child {
-    width: auto !important;
+	height: 100%;
 }
 
+.projects-description {
+	width: 100%;
+	min-height: 500px;
+}
 
-/* 1000px and below */
-@media (max-width: 1000px) {
+/* 1200px and below */
+@media (max-width: 1600px) {
 	.projects-page-container {
 		flex-direction: column;
-		gap: 64px;
+		gap: 32px;
+		padding: 16vh 3vw 8vw 3vh;
 	}
 
 	.projects-page-container > div:first-child {
 		width: 100% !important;
-        height: 100%;
-    }
+		height: 100%;
+	}
 	.projects-page-container > div:last-child {
 		width: 100% !important;
 		height: 50%;
