--- a/src/components/UI/Buttons/ActionButton.module.css
+++ b/src/components/UI/Buttons/ActionButton.module.css
@@ -7,6 +7,7 @@
   min-width: 250px;
   height: 70px;
   padding: 0px 20px;
+  border-radius: 18px;
   /* filter: blur(10px); */
 
   user-select: none;
