--- a/src/components/UI/ProjectGallery/ProjectGallery.module.css
+++ b/src/components/UI/ProjectGallery/ProjectGallery.module.css
@@ -1,14 +1,25 @@
 .project-gallery-container {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	gap: 20px;
+	flex-direction: column;
+	justify-content: center;
+	justify-content: flex-start;
+	gap: 24px;
 	border-radius: 12px;
 	padding: 20px;
-	height: auto;
-	/* min-width: 500px; */
-	overflow: hidden;
+	width: 400px !important;
+	min-width: 400px !important;
+	max-width: 800px;
+	height: 400px;
+	font-size: clamp(0.6rem, 2.5vw, 1rem);
+}
+
+.project-gallery-grid {
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px 20px;
+	width: 100%;
+	height: 100%;
 }
 
 .project-gallery-item {
@@ -17,20 +28,51 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+	cursor: pointer;
 	border-radius: 10px;
-	width: 45%;
-	aspect-ratio: 16/9;
+	padding: 10px;
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
-  /* min-width: 125px; */
+	user-select: none;
+	text-align: center;
 }
 
-@media (max-width: 1000px) {
+/* 	Hack for overriding global style
+	TODO: Remove need for this by altering global style or making new one. */
+.project-gallery-item::after {
+	border-radius: 10px !important;
+}
+
+.project-gallery-item h3 {
+	margin: 0;
+	font-weight: 600;
+	font-size: clamp(0.6rem, 2.5vw, 1rem);
+	line-height: 1.2;
+	color: var(--color-primary);
+}
+
+@media (max-width: 1600px) {
 	.project-gallery-container {
-		width: 100%;
+		padding: clamp(10px, 3vw, 20px);
+		width: clamp(300px, 90vw, 500px);
+		min-width: 0px !important;
+		height: clamp(200px, 40vh, 300px);
+	}
+
+	.project-gallery-grid {
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr 1fr;
+		gap: clamp(8px, 2vw, 15px);
 	}
 
 	.project-gallery-item {
-		width: 30%;
+		padding: clamp(5px, 1.5vw, 10px);
+		width: 100%;
+		height: 100%;
+	}
+
+	.project-gallery-item h3 {
+		font-size: clamp(0.5rem, 3vw, 0.9rem);
 	}
 }
